Forgot to commit.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180817 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180817 Trench segmentation.ipynb
@@ -983,6 +983,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cluster.scale(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(all_futures)"
    ]
   },
