--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180817.2 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180817.2 Trench segmentation.ipynb
@@ -983,6 +983,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cluster.scale(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(all_futures)"
    ]
   },
@@ -993,687 +1002,6 @@
    "outputs": [],
    "source": [
     "errored_futures[-1].result()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Server profiling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from profiling.tracing import TracingProfiler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = TracingProfiler()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from profiling.sampling import SamplingProfiler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = SamplingProfiler()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.dump(\"temp/tracprof\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump(p.result(), open(\"temp/statprof\", \"wb\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Memory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pympler import muppy, tracker, summary, refbrowser\n",
-    "import tracemalloc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "snapshots4 = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "def start_tracemalloc():\n",
-    "    import tracemalloc\n",
-    "\n",
-    "    tracemalloc.start(10)\n",
-    "\n",
-    "\n",
-    "client.run(start_tracemalloc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "def memory_snapshot():\n",
-    "    import tracemalloc\n",
-    "\n",
-    "    return tracemalloc.take_snapshot()\n",
-    "\n",
-    "\n",
-    "snapshots4.append(client.run(memory_snapshot))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stats = snapshots4[-1][\"tcp://10.120.16.242:51094\"].statistics(\"lineno\")\n",
-    "for stat in stats[:10]:\n",
-    "    print(stat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(finished_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "snapshots3[-1].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# k = 'tcp://10.120.16.191:53503'\n",
-    "# k = 'tcp://10.120.16.244:52833'\n",
-    "k = \"tcp://10.120.16.242:51094\"\n",
-    "s1 = snapshots4[-2][k]\n",
-    "s2 = snapshots4[-1][k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gcgc():\n",
-    "    import gc\n",
-    "\n",
-    "    gc.collect()\n",
-    "\n",
-    "\n",
-    "client.run(gcgc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stats = s2.statistics('lineno')[:10]\n",
-    "# stats = s2.statistics('lineno')[:10]\n",
-    "stats = s2.compare_to(s1, \"lineno\")[:20]\n",
-    "for stat in stats:\n",
-    "    print(stat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ss = list(snapshots[0].values())\n",
-    "ss[0].compare_to(ss[1], \"traceback\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "def memory_func():\n",
-    "    from pympler import muppy, tracker, summary\n",
-    "\n",
-    "    return summary.summarize(muppy.get_objects())\n",
-    "\n",
-    "\n",
-    "mem4 = client.run(memory_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary.print_(mem4[\"tcp://10.120.16.242:51094\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "def sample_memory_func():\n",
-    "    from pympler import muppy, tracker, summary\n",
-    "    import random\n",
-    "\n",
-    "    return random.sample(muppy.filter(muppy.get_objects(), Type=str), 10)\n",
-    "\n",
-    "\n",
-    "mem_objs_t3 = client.run(sample_memory_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pa_mem():\n",
-    "    import pyarrow as pa\n",
-    "\n",
-    "    return pa.total_allocated_bytes()\n",
-    "\n",
-    "\n",
-    "client.run(pa_mem)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary.print_(mem3t5[k])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicts = muppy.filter(all_objects, Type=dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mem1.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mems = list(mem2r2.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary.print_(mems[30])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_tracker = tracker.SummaryTracker()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_tracker.print_diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import psutil\n",
-    "\n",
-    "process = psutil.Process(os.getpid())\n",
-    "process.memory_info().rss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "list(take(10, analysis_futures_iter))\n",
-    "None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_tracker.print_diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_tracker.print_diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_objects = muppy.get_objects()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum1 = summary.summarize(all_objects)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary.print_(sum1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary.print_(sum1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicts = muppy.filter(all_objects, Type=dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicts[220000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "root = dicts[0]\n",
-    "cb = refbrowser.ConsoleBrowser(root, maxdepth=2, str_func=lambda x: str(x)[:10])\n",
-    "cb.print_tree()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_tracker.print_diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_tracker.print_diff()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# b = client.start_ipython_workers('tcp://10.120.16.105:45663')['tcp://10.120.16.105:45663']\n",
-    "%remote b print('h')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(stored_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gather_task.cancel()\n",
-    "client.cancel(all_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_futures"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "finished_futures"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "successful_futures_stream"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_futures_stream.emit(next(analysis_futures_iter))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = client.loop.run_in_executor(None, lambda x: time.sleep(x), 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(stored_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(write_failures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(all_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(errored_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(all_futures) / len(frames_to_analyze)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(cancelled_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gather_task.cancel()\n",
-    "client.cancel(all_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gather_task"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# source2 = source.rate_limit(0.001).timed_window(0.1)\n",
-    "# source3 = streamz.buffer(source2, 100).gather_and_cancel(client=client, cancel=True)\n",
-    "# source3.filter(lambda x: not isinstance(x, Exception)).sink(partial(sink_to_arrow, sinks=stream_sinks, writers=stream_writers))\n",
-    "# exceptions = source3.filter(lambda x: isinstance(x, Exception)).sink_to_list()\n",
-    "# t = asyncio.get_event_loop().create_task(source.emit(analysis_futures[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "for i, sink in stream_sinks.items():\n",
-    "    out = pa.OSFile(\n",
-    "        \"/n/scratch2/jqs1/fidelity/all/output/analysis100_stream_{}.arrow\".format(i),\n",
-    "        \"w\",\n",
-    "    )\n",
-    "    out.write(sink.getvalue())\n",
-    "    out.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = stream_sinks[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pa.MemoryMappedFile.b"
    ]
   },
   {
@@ -1718,9 +1046,18 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "framewise_df = pq.read_pandas(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_0.parquet\"\n",
-    ").to_pandas()"
+    "framewise_df = pa.open_stream(\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream11_0.arrow\"\n",
+    ").read_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "framewise_df.info(memory_usage=\"deep\")"
    ]
   },
   {
@@ -1730,9 +1067,18 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trenchwise_df = pq.read_pandas(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_1.parquet\"\n",
-    ").to_pandas()"
+    "trenchwise_df = pa.open_stream(\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream11_1.arrow\"\n",
+    ").read_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenchwise_df.info(memory_usage=\"deep\")"
    ]
   },
   {
@@ -1947,37 +1293,6 @@
     "        for c in reversed(yfp_cols)\n",
     "    ]\n",
     ").cols(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# labelwise_df.index.get_level_values('position')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class NYCTaxi(hv.streams.Stream):\n",
-    "#     alpha = param.Magnitude(default=0.75, doc=\"Opacity\")\n",
-    "#     colormap = param.ObjectSelector(default=\"fire\", objects=\n",
-    "#         hpu.list_cmaps(category='Uniform Sequential', bg='dark'))\n",
-    "#     location = param.ObjectSelector(default='dropoff', objects=['dropoff', 'pickup'])\n",
-    "\n",
-    "#     def make_view(self, x_range, y_range, **kwargs):\n",
-    "#         pts   = hv.Points(taxi, [self.location+'_x', self.location+'_y'])\n",
-    "#         trips = datashade(pts, cmap=hpu.process_cmap(self.colormap),\n",
-    "#             x_range=x_range, y_range=y_range, dynamic=False, **dopts)\n",
-    "#         return tiles.options(alpha=self.alpha) * trips\n",
-    "# explorer = NYCTaxi(name=\"NYC Taxi Trips\")\n",
-    "# parambokeh.Widgets(explorer, callback=explorer.event)\n",
-    "# hv.DynamicMap(explorer.make_view, streams=[explorer, RangeXY()])"
    ]
   },
   {
@@ -2534,89 +1849,6 @@
     "g = ui.show_grid(selected, stream=frame_stream)\n",
     "g"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Memory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pympler import tracker\n",
-    "\n",
-    "memory_tracker = tracker.SummaryTracker()\n",
-    "memory_tracker.print_diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pympler.classtracker import ClassTracker\n",
-    "\n",
-    "tracker = ClassTracker()\n",
-    "tracker.track_object()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import objgraph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = objgraph.by_type(\"IOStream\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "objgraph.show_backrefs(s[50])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "objgraph.show_most_common_types(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
