Vastly improved performance of select_dataframe on large dataframes, and hence dataframe_viewer, in special case where the only slices are trailing.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180901 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180901 Burst analysis.ipynb
@@ -1103,6 +1103,8 @@
    "outputs": [],
    "source": [
     "# TODO: otherwise computing is_unique is costly when we want to get_loc with full key\n",
+    "if \"_cache\" not in labelwise_df.index.__dict__:\n",
+    "    labelwise_df.index.__dict__[\"_cache\"] = {}\n",
     "labelwise_df.index._cache[\"is_unique\"] = True"
    ]
   },
@@ -1113,16 +1115,6 @@
    "outputs": [],
    "source": [
     "labelwise_df.columns = [\"/\".join(col).strip() for col in labelwise_df.columns.values]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# labelwise_df.index.names = ['filename', 'position', 't', 'trench_set', 'trench', 'label']\n",
-    "# labelwise_df.sort_index(inplace=True)"
    ]
   },
   {
@@ -1350,6 +1342,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "b = (1, 2, 3, None, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", labelwise_df.index)\n",
     "label_stream = LabelStream()\n",
     "box = ui.dataframe_browser(label_stream)\n",
@@ -1364,176 +1365,8 @@
    "outputs": [],
    "source": [
     "ui.dataframe_viewer(\n",
-    "    partial(ui.select_dataframe, labelwise_df[:10000]), label_stream, label=slice(None)\n",
+    "    partial(ui.select_dataframe, labelwise_df), label_stream, label=slice(None)\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.index.__dict__[\"is_unique\"] = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.index._cache[\"is_unique\"] = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.index.is_unique"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = labelwise_df[:100_000_00]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "a.loc[IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2\", 0, 0, 1, :, :], :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "a.loc[IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2\", 0, 0, 1, 7, :], :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "a.loc[IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2\", 0, 0, 1, 7, 0], :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%prun a.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2', 0, 0, 1, 7,:],:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.select_dataframe(labelwise_df, **label_stream.contents)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = ui.show_grid(labelwise_df[:100], stream=label_stream)\n",
-    "q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q.df = labelwise_df[100:200]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.loc[\n",
-    "    IDX[\n",
-    "        label_stream.filename,\n",
-    "        label_stream.position,\n",
-    "        label_stream.t,\n",
-    "        label_stream.trench_set,\n",
-    "        label_stream.trench,\n",
-    "        0,\n",
-    "    ],\n",
-    "    :,\n",
-    "].to_frame(name=0).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.loc[\n",
-    "    IDX[\n",
-    "        label_stream.filename,\n",
-    "        label_stream.position,\n",
-    "        label_stream.t,\n",
-    "        label_stream.trench_set,\n",
-    "        label_stream.trench,\n",
-    "        0,\n",
-    "    ],\n",
-    "    :,\n",
-    "].to_frame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.loc[\n",
-    "    IDX[\n",
-    "        label_stream.filename,\n",
-    "        label_stream.position,\n",
-    "        label_stream.t,\n",
-    "        label_stream.trench_set,\n",
-    "        label_stream.trench,\n",
-    "    ],\n",
-    "    :,\n",
-    "]"
    ]
   },
   {
@@ -1578,24 +1411,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labelwise_df.loc[\n",
-    "    IDX[\n",
-    "        label_stream.filename,\n",
-    "        label_stream.position,\n",
-    "        label_stream.t,\n",
-    "        label_stream.trench_set,\n",
-    "        label_stream.trench,\n",
-    "    ],\n",
-    "    :,\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def cb(**kwargs):\n",
     "    dat = labelwise_df.loc[\n",
     "        workflow.stream_slice(\n",
@@ -1611,6 +1426,145 @@
     "\n",
     "\n",
     "ui.viewer(cb, label_stream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = (slice(None), slice(None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while len(idx) and idx[-1] == slice(None):\n",
+    "    idx = idx[:-1]\n",
+    "idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "labelwise_df.xs(\n",
+    "    (\n",
+    "        label_stream.filename,\n",
+    "        label_stream.position,\n",
+    "        label_stream.t,\n",
+    "        label_stream.trench_set,\n",
+    "        label_stream.trench,\n",
+    "    ),\n",
+    "    level=[\"filename\", \"position\", \"t\", \"trench_set\", \"trench\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "labelwise_df.index.get_loc_level(\n",
+    "    (\n",
+    "        label_stream.filename,\n",
+    "        label_stream.position,\n",
+    "        label_stream.t,\n",
+    "        label_stream.trench_set,\n",
+    "        label_stream.trench,\n",
+    "        slice(None),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_df.loc?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "labelwise_df.loc[\n",
+    "    IDX[\n",
+    "        label_stream.filename,\n",
+    "        label_stream.position,\n",
+    "        label_stream.t,\n",
+    "        label_stream.trench_set,\n",
+    "        label_stream.trench,\n",
+    "        :,\n",
+    "    ],\n",
+    "    :,\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -f pd.DataFrame.xs labelwise_df.xs((label_stream.filename,label_stream.position,label_stream.t,label_stream.trench_set),level=['filename','position','t','trench_set'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -f pd.MultiIndex.__getitem__ labelwise_df.loc[IDX[label_stream.filename,label_stream.position,label_stream.t,label_stream.trench_set,label_stream.trench,:],:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%prun labelwise_df.loc[IDX[label_stream.filename,label_stream.position,label_stream.t,label_stream.trench_set,label_stream.trench,:],:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%prun label_stream.event(t=6)"
    ]
   },
   {
