BOOM GOT EM. Unambiguous detection of transcription error events.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180901 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180901 Burst analysis.ipynb
@@ -1207,8 +1207,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "# labelwise_subset = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2',:],:]\n",
     "labelwise_subset = labelwise_df.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", :5], :\n",
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :], :\n",
     "]"
    ]
   },
@@ -1332,17 +1333,8 @@
    "source": [
     "%%output size=180\n",
     "hv.Scatter(\n",
-    "    detected_bursts, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
+    "    detected_bursts[:10_000], kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
     ").options(size=3, color_index=\"trench\", cmap=\"Category20\", tools=[\"hover\", \"tap\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = (1, 2, 3, None, None)"
    ]
   },
   {
@@ -1399,7 +1391,7 @@
    "source": [
     "%%output size=180\n",
     "p = hv.Scatter(\n",
-    "    detected_bursts, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
+    "    detected_bursts[:10_000], kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
     ").options(size=3, color_index=\"trench\", tools=[\"hover\", \"tap\"], cmap=\"Category20\")\n",
     "ui.selection_to_stream(p, label_stream)\n",
     "p"
@@ -1426,145 +1418,6 @@
     "\n",
     "\n",
     "ui.viewer(cb, label_stream)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Profiling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = (slice(None), slice(None))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while len(idx) and idx[-1] == slice(None):\n",
-    "    idx = idx[:-1]\n",
-    "idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "labelwise_df.xs(\n",
-    "    (\n",
-    "        label_stream.filename,\n",
-    "        label_stream.position,\n",
-    "        label_stream.t,\n",
-    "        label_stream.trench_set,\n",
-    "        label_stream.trench,\n",
-    "    ),\n",
-    "    level=[\"filename\", \"position\", \"t\", \"trench_set\", \"trench\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "labelwise_df.index.get_loc_level(\n",
-    "    (\n",
-    "        label_stream.filename,\n",
-    "        label_stream.position,\n",
-    "        label_stream.t,\n",
-    "        label_stream.trench_set,\n",
-    "        label_stream.trench,\n",
-    "        slice(None),\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df.loc?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "labelwise_df.loc[\n",
-    "    IDX[\n",
-    "        label_stream.filename,\n",
-    "        label_stream.position,\n",
-    "        label_stream.t,\n",
-    "        label_stream.trench_set,\n",
-    "        label_stream.trench,\n",
-    "        :,\n",
-    "    ],\n",
-    "    :,\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelwise_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -f pd.DataFrame.xs labelwise_df.xs((label_stream.filename,label_stream.position,label_stream.t,label_stream.trench_set),level=['filename','position','t','trench_set'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -f pd.MultiIndex.__getitem__ labelwise_df.loc[IDX[label_stream.filename,label_stream.position,label_stream.t,label_stream.trench_set,label_stream.trench,:],:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%prun labelwise_df.loc[IDX[label_stream.filename,label_stream.position,label_stream.t,label_stream.trench_set,label_stream.trench,:],:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%prun label_stream.event(t=6)"
    ]
   },
   {
